--- a/week10/style.css
+++ b/week10/style.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     background-image: url(https://thumbs.gfycat.com/AnguishedWellmadeEmu-max-1mb.gif);
     display: flex;
-    height: 100vh;
+    height: 105vh;
 }
 
 .word {
@@ -21,7 +21,7 @@ body {
     height: 100%;
     justify-content: center;
     align-items: center;
-    
+    /* background-color: green; */
 }
 
 #middle-img {
