--- a/week14/style.css
+++ b/week14/style.css
@@ -24,14 +24,23 @@ body {
 }
 
 #grid {
-    border: solid 5px purple;    
+    border: solid 5px black;    
 }
 
 #tile{
-    border: solid 1px rgb(255, 255, 255, 0.2);
     width: 25px;
     height: 25px;
     color: white;
+}
+
+.display-box {
+    border: solid 2px black;
+    margin-inline: 2vw;
+}
+
+#next-container {
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .row {
@@ -41,24 +50,27 @@ body {
 }
 
 .empty {
+    border: solid 1px rgb(255, 255, 255, 0.2);
     background-color: black;
 }
 
 .mino {
-    background-color: cyan;
+    border: solid 1px black;
+    background-color: red;
+}
+
+.ghost {
+    border: solid 1px white;
+    background-color: gray;
 }
 
 .filled {
-    background-color: red;
+    border: solid 1px black;
+    background-color: blue;
 }
 
 .score-box {
     width: 10vw;
     height: 10vw;
     border: solid 5px red;
-}
-.box {
-    width: 10vw;
-    height: 10vw;
-    border: solid 5px blue;
 }
