--- a/week14/style.css
+++ b/week14/style.css
@@ -82,7 +82,11 @@ a::after {
 
 #home-page {
     background-color: black;
-    background-image: linear-gradient(45deg, #2c0735, #15106b, #2c0735);
+    background-image: linear-gradient(180deg, 
+        #5e0055,
+        #5e0055,
+        #2f005c,
+        #18005f);
 }
 
 #floor {
@@ -123,7 +127,7 @@ a::after {
 }
 
 .floor-tile {
-    border: solid 3px cyan;
+    border: solid 3px #a000ff;
 }
 
 
