--- a/week14/style.css
+++ b/week14/style.css
@@ -70,14 +70,20 @@ a::after {
     padding:0;
     width: 18.8vw;
     height: 40vw;
-    background-image: url(https://api.sandbox.game/assets/public/f9a867a6-7076-4968-be99-ca8972bc7feb/preview?bafkreicpvddc7zwxmpsnv3qkic55tlfc3s5lmv2v4diyru5vxoxnzegtju?bafkreicpvddc7zwxmpsnv3qkic55tlfc3s5lmv2v4diyru5vxoxnzegtju);
     background-size: contain;
     background-repeat: no-repeat;
 }
 
-
 #arcade-machine:hover {
     transform: scale(1.1);
+}
+
+.tetris-machine {
+    background-image: url(./assets/tetris-machine.png)    
+}
+
+.snake-machine {
+    background-image: url(./assets/snake-machine.png);
 }
 
 #home-page {
@@ -113,7 +119,7 @@ a::after {
     
     position: absolute;
     top: 50%;
-    left:50%;
+    left: 50%;
     transform: translate(-50%, -50%);
 
     width:40vw;
@@ -210,21 +216,28 @@ a::after {
     background-color: gray;
 }
 
-.score-box {
+#score-box {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 15vw;
     height: 10vw;
     border: solid 5px gray;
-    margin-left: 1vw;
+    margin-inline: 1vw;
     background-color: rgb(17, 17, 17);
     font-size: 1.75vw;
     color: white;
     font-family: 'Press Start 2P', cursive;
+    text-align: center;
 }
 
 /* SNAKE STYLING */
+#snake-background {
+    background-image: url(https://www.xmple.com/wallpaper/graph-paper-black-green-grid-1920x1080-c2-000000-00ff00-l2-2-62-a-30-f-20.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .snake {
     border: solid 1px green;
     background-color: green;
